# ChangeLog for net-libs/libpri
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/libpri/ChangeLog,v 1.68 2007/08/06 20:20:22 angelos Exp $

  06 Aug 2007; Christoph Mende <angelos@gentoo.org>
  +files/libpri-1.2.5-multilib.patch, libpri-1.2.5.ebuild:
  Fixed multilib install paths for libpri-1.2.5 and marked it stable on amd64

  17 Jul 2007; Christian Faulhammer <opfer@gentoo.org> libpri-1.2.5.ebuild:
  stable x86, security bug 171884

  16 Jul 2007; Gustavo Zacarias <gustavoz@gentoo.org> libpri-1.2.5.ebuild:
  Stable on sparc wrt security #171884

*libpri-1.2.5 (12 Jul 2007)

  12 Jul 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  +files/libpri-1.2.5-gentoo.diff, +libpri-1.2.5.ebuild:
  Verbump

  01 May 2007; Raúl Porcel <armin76@gentoo.org> libpri-1.2.4-r2.ebuild:
  x86 stable wrt security bug 175960

  30 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  libpri-1.2.4-r2.ebuild:
  Stable on sparc wrt security #175960

*libpri-1.2.4-r2 (26 Apr 2007)

  26 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  +libpri-1.2.4-r2.ebuild:
  Revbump with bristuff 1y-d

  13 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  libpri-1.2.4-r1.ebuild:
  stable x86, security bug #169161

  13 Mar 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  libpri-1.2.4-r1.ebuild:
  Stable on sparc

*libpri-1.2.4-r1 (17 Jan 2007)

  17 Jan 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  +libpri-1.2.4-r1.ebuild:
  New rev with BRIstuff-0.3.0-PRE-1x

*libpri-1.2.4 (27 Nov 2006)

  27 Nov 2006; Gustavo Zacarias <gustavoz@gentoo.org> +libpri-1.2.4.ebuild:
  Bump to 1.2.4

  06 Oct 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  libpri-1.2.3-r1.ebuild:
  Stable on x86 wrt bug #144941.

  14 Sep 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  libpri-1.2.3-r1.ebuild:
  Stable on sparc wrt security #144941

*libpri-1.2.3-r1 (06 Sep 2006)

  06 Sep 2006; Stefan Knoblich <stkn@gentoo.org> +libpri-1.2.3-r1.ebuild: