@@ -1,10 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-<herd>voip</herd>
-<herd>gnome</herd>
-<maintainer>
-  <email>stkn@gentoo.org</email>
-  <name>Stefan Knoblich</name>
-</maintainer>
+  <herd>voip</herd>
+  <herd>gnome</herd>
 </pkgmetadata>
